Fix horizontal scroll bar on window

--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@ html {
 }
 
 #header {
-  width: 100%;
+  /* width: 100%; */
   background-color: #967bb6;
   font-weight: bolder;
   margin-bottom: 1rem;
